# Calendxr

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.jp.md  README.md  docker-compose.yaml  dockerfile  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: lint.yml  next.yml
app/api/chatbot/: route.ts
app/components/: Calendar.tsx  OCRPanel.tsx  chat-interface.tsx  event-form.tsx
app/components/ui/: calendar.tsx
app/home/: page.tsx
backend/: .env  .env.example  .gitignore  README.md  app.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: .env.example  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend-flutter/lib/: add_event_dialog.dart  calendar_page.dart  calendar_widget.dart  day_widget.dart  main.dart
frontend-web/: .env.example  package-lock.json  package.json
frontend-web/app/: page.tsx
frontend-web/components/: calendar.tsx  chat-interface.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Calendar.tsx  OCRPanel.tsx  ThemeSwitcher.tsx  auth-provider.tsx  calendarStyles.ts  chat-interface.tsx  event-form.tsx  group-scheduler.tsx  grouping.tsx  ocr-interface.tsx  theme-provider.tsx
frontend/components/: Calendar.tsx  calendar.tsx  chat-interface.tsx
frontend/lib/: add_event_dialog.dart  calendar.ts  calendar_page.dart  calendar_widget.dart  chatbot.ts  date-format-adapter.ts  day_widget.dart  main.dart  rag.ts
frontend/prisma/: schema.prisma
frontend/styles/: globals.css  themes.css
frontend/utils/: api.tsx
lib/: calendar.ts
(+33 files in other folders)
